--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Bennett Diamond">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{{ page.title }}</title>
+    <title>CFCB | {{ page.title }}</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/css/themes/light.css" id="theme"/>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/fonts/sans.css" id="font"/>
