--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,20 +6,20 @@
   </div>
   <div class="themeWrapper">
     <div class="themeList" id="themeList" aria-labelledby="theme list">
-      <button onclick="swapStyleSheet('../css/themes/light.css')">Light</button>
-      <button onclick="swapStyleSheet('../css/themes/dark.css')">Dark</button>
-      <button onclick="swapStyleSheet('../css/themes/sepia.css')">Sepia</button>
-      <button onclick="swapStyleSheet('../css/themes/solarized.css')">Solarized</button>
-      <button onclick="swapStyleSheet('../css/themes/4chan.css')">Greentext</button>
-      <button onclick="swapStyleSheet('../css/themes/terminal.css')">Terminal</button>
-      <button onclick="swapStyleSheet('../css/themes/Epilepsy-Warning.css')">Epilepsy Warning</button>
+      <button onclick="swapStyleSheet('/css/themes/light.css')">Light</button>
+      <button onclick="swapStyleSheet('/css/themes/dark.css')">Dark</button>
+      <button onclick="swapStyleSheet('/css/themes/sepia.css')">Sepia</button>
+      <button onclick="swapStyleSheet('/css/themes/solarized.css')">Solarized</button>
+      <button onclick="swapStyleSheet('/css/themes/4chan.css')">Greentext</button>
+      <button onclick="swapStyleSheet('/css/themes/terminal.css')">Terminal</button>
+      <button onclick="swapStyleSheet('/css/themes/Epilepsy-Warning.css')">Epilepsy Warning</button>
     </div>
     <div class="themeList" id="fontList" aria-labelledby="font list">
-      <button style="font-family:'Roboto', sans-serif" onclick="swapFontStyleSheet('../css/fonts/sans.css')">Sans</button>
-      <button style="font-family:serif" onclick="swapFontStyleSheet('../css/fonts/serif.css')">Serif</button>
-      <button style="font-family:Comic Sans, sans-serif" onclick="swapFontStyleSheet('../css/fonts/comic.css')">Comic Sans</button>
-      <button style="font-family:dyslexic, serif" onclick="swapFontStyleSheet('../css/fonts/dyslexic.css')">Dyslexic</button>
-      <button style="font-family:Monospace" onclick="swapFontStyleSheet('../css/fonts/monospace.css')">Monospace</button>
+      <button style="font-family:'Roboto', sans-serif" onclick="swapFontStyleSheet('/css/fonts/sans.css')">Sans</button>
+      <button style="font-family:serif" onclick="swapFontStyleSheet('/css/fonts/serif.css')">Serif</button>
+      <button style="font-family:Comic Sans, sans-serif" onclick="swapFontStyleSheet('/css/fonts/comic.css')">Comic Sans</button>
+      <button style="font-family:dyslexic, serif" onclick="swapFontStyleSheet('/css/fonts/dyslexic.css')">Dyslexic</button>
+      <button style="font-family:Monospace" onclick="swapFontStyleSheet('/css/fonts/monospace.css')">Monospace</button>
     </div>
   </div>
   <div class="panel-wrapper">
