--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 it'll be self sufficient and very miniscule. No about me page, and resources will eventually go on my portfolio-->
 
 <!--TODO: Add search bar functionality-->
-<div class="nav-status">{{ page.url }}</div>
+<div class="nav-status">Critiquing Food Critique Blogs — {{ page.url }}</div>
 <div class="content-wrapper">
   {% include sidebar.html %}
   <div class="body-wrapper">
