--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -81,6 +81,7 @@ html, body, .search{
 	color:white;
 	text-align:left;
 	font-size:16px;
+	filter: brightness(90%);
 }
 .dropdown:focus, .dropdown:hover{background:$selected;}
 
